
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
__attribute__((used)) static const char *materialui_texture_path(unsigned id)
{
   switch (id)
   {
      case 156:
         return "pointer.png";
      case 190:
         return "back.png";
      case 139:
         return "switch_on.png";
      case 140:
         return "switch_off.png";
      case 141:
         return "switch_bg.png";
      case 136:
         return "main_tab_passive.png";
      case 135:
         return "playlists_tab_passive.png";
      case 133:
         return "settings_tab_passive.png";
      case 137:
         return "back_tab.png";
      case 134:
         return "resume_tab.png";
      case 164:
         return "key.png";
      case 163:
         return "key-hover.png";
      case 169:
         return "folder.png";
      case 158:
         return "parent_directory.png";
      case 166:
         return "image.png";
      case 128:
         return "video.png";
      case 160:
         return "music.png";
      case 191:
         return "archive.png";
      case 154:
         return "quit.png";
      case 168:
         return "help.png";
      case 159:
         return "netplay.png";
      case 176:
         return "cores.png";
      case 177:
         return "controls.png";
      case 150:
         return "resume.png";
      case 151:
         return "restart.png";
      case 179:
         return "close.png";
      case 174:
         return "core_options.png";
      case 175:
         return "core_cheat_options.png";
      case 144:
         return "shaders.png";
      case 193:
         return "add_to_favorites.png";
      case 149:
         return "run.png";
      case 152:
         return "rename.png";
      case 173:
         return "database.png";
      case 192:
         return "add_to_mixer.png";
      case 147:
         return "scan.png";
      case 153:
         return "remove.png";
      case 143:
         return "start_core.png";
      case 161:
         return "load_state.png";
      case 148:
         return "save_state.png";
      case 172:
         return "disk.png";
      case 171:
         return "eject.png";
      case 180:
         return "menu_check.png";
      case 131:
         return "undo_load_state.png";
      case 130:
         return "undo_save_state.png";
      case 142:
         return "state_slot.png";
      case 132:
         return "take_screenshot.png";
      case 178:
         return "configurations.png";
      case 162:
         return "load_content.png";
      case 129:
         return "update.png";
      case 155:
         return "quickmenu.png";
      case 167:
         return "history.png";
      case 165:
         return "information.png";
      case 194:
         return "add.png";
      case 145:
         return "settings.png";
      case 170:
         return "file.png";
      case 157:
         return "playlist.png";
      case 146:
         return "search.png";
      case 181:
         return "battery_critical.png";
      case 188:
         return "battery_20.png";
      case 187:
         return "battery_30.png";
      case 186:
         return "battery_50.png";
      case 185:
         return "battery_60.png";
      case 184:
         return "battery_80.png";
      case 183:
         return "battery_90.png";
      case 189:
         return "battery_100.png";
      case 182:
         return "battery_charging.png";
      case 138:
         return "switch_view.png";
   }

   return ((void*)0);
}
