; ModuleID = '/home/carl/AnghaBench/RetroArch/menu/drivers/extr_materialui.c_materialui_texture_path.c'
source_filename = "/home/carl/AnghaBench/RetroArch/menu/drivers/extr_materialui.c_materialui_texture_path.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [12 x i8] c"pointer.png\00", align 1
@.str.1 = private unnamed_addr constant [9 x i8] c"back.png\00", align 1
@.str.2 = private unnamed_addr constant [14 x i8] c"switch_on.png\00", align 1
@.str.3 = private unnamed_addr constant [15 x i8] c"switch_off.png\00", align 1
@.str.4 = private unnamed_addr constant [14 x i8] c"switch_bg.png\00", align 1
@.str.5 = private unnamed_addr constant [21 x i8] c"main_tab_passive.png\00", align 1
@.str.6 = private unnamed_addr constant [26 x i8] c"playlists_tab_passive.png\00", align 1
@.str.7 = private unnamed_addr constant [25 x i8] c"settings_tab_passive.png\00", align 1
@.str.8 = private unnamed_addr constant [13 x i8] c"back_tab.png\00", align 1
@.str.9 = private unnamed_addr constant [15 x i8] c"resume_tab.png\00", align 1
@.str.10 = private unnamed_addr constant [8 x i8] c"key.png\00", align 1
@.str.11 = private unnamed_addr constant [14 x i8] c"key-hover.png\00", align 1
@.str.12 = private unnamed_addr constant [11 x i8] c"folder.png\00", align 1
@.str.13 = private unnamed_addr constant [21 x i8] c"parent_directory.png\00", align 1
@.str.14 = private unnamed_addr constant [10 x i8] c"image.png\00", align 1
@.str.15 = private unnamed_addr constant [10 x i8] c"video.png\00", align 1
@.str.16 = private unnamed_addr constant [10 x i8] c"music.png\00", align 1
@.str.17 = private unnamed_addr constant [12 x i8] c"archive.png\00", align 1
@.str.18 = private unnamed_addr constant [9 x i8] c"quit.png\00", align 1
@.str.19 = private unnamed_addr constant [9 x i8] c"help.png\00", align 1
@.str.20 = private unnamed_addr constant [12 x i8] c"netplay.png\00", align 1
@.str.21 = private unnamed_addr constant [10 x i8] c"cores.png\00", align 1
@.str.22 = private unnamed_addr constant [13 x i8] c"controls.png\00", align 1
@.str.23 = private unnamed_addr constant [11 x i8] c"resume.png\00", align 1
@.str.24 = private unnamed_addr constant [12 x i8] c"restart.png\00", align 1
@.str.25 = private unnamed_addr constant [10 x i8] c"close.png\00", align 1
@.str.26 = private unnamed_addr constant [17 x i8] c"core_options.png\00", align 1
@.str.27 = private unnamed_addr constant [23 x i8] c"core_cheat_options.png\00", align 1
@.str.28 = private unnamed_addr constant [12 x i8] c"shaders.png\00", align 1
@.str.29 = private unnamed_addr constant [21 x i8] c"add_to_favorites.png\00", align 1
@.str.30 = private unnamed_addr constant [8 x i8] c"run.png\00", align 1
@.str.31 = private unnamed_addr constant [11 x i8] c"rename.png\00", align 1
@.str.32 = private unnamed_addr constant [13 x i8] c"database.png\00", align 1
@.str.33 = private unnamed_addr constant [17 x i8] c"add_to_mixer.png\00", align 1
@.str.34 = private unnamed_addr constant [9 x i8] c"scan.png\00", align 1
@.str.35 = private unnamed_addr constant [11 x i8] c"remove.png\00", align 1
@.str.36 = private unnamed_addr constant [15 x i8] c"start_core.png\00", align 1
@.str.37 = private unnamed_addr constant [15 x i8] c"load_state.png\00", align 1
@.str.38 = private unnamed_addr constant [15 x i8] c"save_state.png\00", align 1
@.str.39 = private unnamed_addr constant [9 x i8] c"disk.png\00", align 1
@.str.40 = private unnamed_addr constant [10 x i8] c"eject.png\00", align 1
@.str.41 = private unnamed_addr constant [15 x i8] c"menu_check.png\00", align 1
@.str.42 = private unnamed_addr constant [20 x i8] c"undo_load_state.png\00", align 1
@.str.43 = private unnamed_addr constant [20 x i8] c"undo_save_state.png\00", align 1
@.str.44 = private unnamed_addr constant [15 x i8] c"state_slot.png\00", align 1
@.str.45 = private unnamed_addr constant [20 x i8] c"take_screenshot.png\00", align 1
@.str.46 = private unnamed_addr constant [19 x i8] c"configurations.png\00", align 1
@.str.47 = private unnamed_addr constant [17 x i8] c"load_content.png\00", align 1
@.str.48 = private unnamed_addr constant [11 x i8] c"update.png\00", align 1
@.str.49 = private unnamed_addr constant [14 x i8] c"quickmenu.png\00", align 1
@.str.50 = private unnamed_addr constant [12 x i8] c"history.png\00", align 1
@.str.51 = private unnamed_addr constant [16 x i8] c"information.png\00", align 1
@.str.52 = private unnamed_addr constant [8 x i8] c"add.png\00", align 1
@.str.53 = private unnamed_addr constant [13 x i8] c"settings.png\00", align 1
@.str.54 = private unnamed_addr constant [9 x i8] c"file.png\00", align 1
@.str.55 = private unnamed_addr constant [13 x i8] c"playlist.png\00", align 1
@.str.56 = private unnamed_addr constant [11 x i8] c"search.png\00", align 1
@.str.57 = private unnamed_addr constant [21 x i8] c"battery_critical.png\00", align 1
@.str.58 = private unnamed_addr constant [15 x i8] c"battery_20.png\00", align 1
@.str.59 = private unnamed_addr constant [15 x i8] c"battery_30.png\00", align 1
@.str.60 = private unnamed_addr constant [15 x i8] c"battery_50.png\00", align 1
@.str.61 = private unnamed_addr constant [15 x i8] c"battery_60.png\00", align 1
@.str.62 = private unnamed_addr constant [15 x i8] c"battery_80.png\00", align 1
@.str.63 = private unnamed_addr constant [15 x i8] c"battery_90.png\00", align 1
@.str.64 = private unnamed_addr constant [16 x i8] c"battery_100.png\00", align 1
@.str.65 = private unnamed_addr constant [21 x i8] c"battery_charging.png\00", align 1
@.str.66 = private unnamed_addr constant [16 x i8] c"switch_view.png\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i32)* @materialui_texture_path to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @materialui_texture_path(i32 %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i32, i32* %3, align 4
  switch i32 %4, label %72 [
    i32 156, label %5
    i32 190, label %6
    i32 139, label %7
    i32 140, label %8
    i32 141, label %9
    i32 136, label %10
    i32 135, label %11
    i32 133, label %12
    i32 137, label %13
    i32 134, label %14
    i32 164, label %15
    i32 163, label %16
    i32 169, label %17
    i32 158, label %18
    i32 166, label %19
    i32 128, label %20
    i32 160, label %21
    i32 191, label %22
    i32 154, label %23
    i32 168, label %24
    i32 159, label %25
    i32 176, label %26
    i32 177, label %27
    i32 150, label %28
    i32 151, label %29
    i32 179, label %30
    i32 174, label %31
    i32 175, label %32
    i32 144, label %33
    i32 193, label %34
    i32 149, label %35
    i32 152, label %36
    i32 173, label %37
    i32 192, label %38
    i32 147, label %39
    i32 153, label %40
    i32 143, label %41
    i32 161, label %42
    i32 148, label %43
    i32 172, label %44
    i32 171, label %45
    i32 180, label %46
    i32 131, label %47
    i32 130, label %48
    i32 142, label %49
    i32 132, label %50
    i32 178, label %51
    i32 162, label %52
    i32 129, label %53
    i32 155, label %54
    i32 167, label %55
    i32 165, label %56
    i32 194, label %57
    i32 145, label %58
    i32 170, label %59
    i32 157, label %60
    i32 146, label %61
    i32 181, label %62
    i32 188, label %63
    i32 187, label %64
    i32 186, label %65
    i32 185, label %66
    i32 184, label %67
    i32 183, label %68
    i32 189, label %69
    i32 182, label %70
    i32 138, label %71
  ]

5:                                                ; preds = %1
  store i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str, i64 0, i64 0), i8** %2, align 8
  br label %73

6:                                                ; preds = %1
  store i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.1, i64 0, i64 0), i8** %2, align 8
  br label %73

7:                                                ; preds = %1
  store i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.2, i64 0, i64 0), i8** %2, align 8
  br label %73

8:                                                ; preds = %1
  store i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.3, i64 0, i64 0), i8** %2, align 8
  br label %73

9:                                                ; preds = %1
  store i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.4, i64 0, i64 0), i8** %2, align 8
  br label %73

10:                                               ; preds = %1
  store i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str.5, i64 0, i64 0), i8** %2, align 8
  br label %73

11:                                               ; preds = %1
  store i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str.6, i64 0, i64 0), i8** %2, align 8
  br label %73

12:                                               ; preds = %1
  store i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str.7, i64 0, i64 0), i8** %2, align 8
  br label %73

13:                                               ; preds = %1
  store i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.8, i64 0, i64 0), i8** %2, align 8
  br label %73

14:                                               ; preds = %1
  store i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.9, i64 0, i64 0), i8** %2, align 8
  br label %73

15:                                               ; preds = %1
  store i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.10, i64 0, i64 0), i8** %2, align 8
  br label %73

16:                                               ; preds = %1
  store i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.11, i64 0, i64 0), i8** %2, align 8
  br label %73

17:                                               ; preds = %1
  store i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.12, i64 0, i64 0), i8** %2, align 8
  br label %73

18:                                               ; preds = %1
  store i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str.13, i64 0, i64 0), i8** %2, align 8
  br label %73

19:                                               ; preds = %1
  store i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.14, i64 0, i64 0), i8** %2, align 8
  br label %73

20:                                               ; preds = %1
  store i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.15, i64 0, i64 0), i8** %2, align 8
  br label %73

21:                                               ; preds = %1
  store i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.16, i64 0, i64 0), i8** %2, align 8
  br label %73

22:                                               ; preds = %1
  store i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.17, i64 0, i64 0), i8** %2, align 8
  br label %73

23:                                               ; preds = %1
  store i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.18, i64 0, i64 0), i8** %2, align 8
  br label %73

24:                                               ; preds = %1
  store i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.19, i64 0, i64 0), i8** %2, align 8
  br label %73

25:                                               ; preds = %1
  store i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.20, i64 0, i64 0), i8** %2, align 8
  br label %73

26:                                               ; preds = %1
  store i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.21, i64 0, i64 0), i8** %2, align 8
  br label %73

27:                                               ; preds = %1
  store i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.22, i64 0, i64 0), i8** %2, align 8
  br label %73

28:                                               ; preds = %1
  store i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.23, i64 0, i64 0), i8** %2, align 8
  br label %73

29:                                               ; preds = %1
  store i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.24, i64 0, i64 0), i8** %2, align 8
  br label %73

30:                                               ; preds = %1
  store i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.25, i64 0, i64 0), i8** %2, align 8
  br label %73

31:                                               ; preds = %1
  store i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str.26, i64 0, i64 0), i8** %2, align 8
  br label %73

32:                                               ; preds = %1
  store i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str.27, i64 0, i64 0), i8** %2, align 8
  br label %73

33:                                               ; preds = %1
  store i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.28, i64 0, i64 0), i8** %2, align 8
  br label %73

34:                                               ; preds = %1
  store i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str.29, i64 0, i64 0), i8** %2, align 8
  br label %73

35:                                               ; preds = %1
  store i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.30, i64 0, i64 0), i8** %2, align 8
  br label %73

36:                                               ; preds = %1
  store i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.31, i64 0, i64 0), i8** %2, align 8
  br label %73

37:                                               ; preds = %1
  store i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.32, i64 0, i64 0), i8** %2, align 8
  br label %73

38:                                               ; preds = %1
  store i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str.33, i64 0, i64 0), i8** %2, align 8
  br label %73

39:                                               ; preds = %1
  store i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.34, i64 0, i64 0), i8** %2, align 8
  br label %73

40:                                               ; preds = %1
  store i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.35, i64 0, i64 0), i8** %2, align 8
  br label %73

41:                                               ; preds = %1
  store i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.36, i64 0, i64 0), i8** %2, align 8
  br label %73

42:                                               ; preds = %1
  store i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.37, i64 0, i64 0), i8** %2, align 8
  br label %73

43:                                               ; preds = %1
  store i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.38, i64 0, i64 0), i8** %2, align 8
  br label %73

44:                                               ; preds = %1
  store i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.39, i64 0, i64 0), i8** %2, align 8
  br label %73

45:                                               ; preds = %1
  store i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.40, i64 0, i64 0), i8** %2, align 8
  br label %73

46:                                               ; preds = %1
  store i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.41, i64 0, i64 0), i8** %2, align 8
  br label %73

47:                                               ; preds = %1
  store i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str.42, i64 0, i64 0), i8** %2, align 8
  br label %73

48:                                               ; preds = %1
  store i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str.43, i64 0, i64 0), i8** %2, align 8
  br label %73

49:                                               ; preds = %1
  store i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.44, i64 0, i64 0), i8** %2, align 8
  br label %73

50:                                               ; preds = %1
  store i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str.45, i64 0, i64 0), i8** %2, align 8
  br label %73

51:                                               ; preds = %1
  store i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str.46, i64 0, i64 0), i8** %2, align 8
  br label %73

52:                                               ; preds = %1
  store i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str.47, i64 0, i64 0), i8** %2, align 8
  br label %73

53:                                               ; preds = %1
  store i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.48, i64 0, i64 0), i8** %2, align 8
  br label %73

54:                                               ; preds = %1
  store i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.49, i64 0, i64 0), i8** %2, align 8
  br label %73

55:                                               ; preds = %1
  store i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.50, i64 0, i64 0), i8** %2, align 8
  br label %73

56:                                               ; preds = %1
  store i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.51, i64 0, i64 0), i8** %2, align 8
  br label %73

57:                                               ; preds = %1
  store i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.52, i64 0, i64 0), i8** %2, align 8
  br label %73

58:                                               ; preds = %1
  store i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.53, i64 0, i64 0), i8** %2, align 8
  br label %73

59:                                               ; preds = %1
  store i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.54, i64 0, i64 0), i8** %2, align 8
  br label %73

60:                                               ; preds = %1
  store i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.55, i64 0, i64 0), i8** %2, align 8
  br label %73

61:                                               ; preds = %1
  store i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.56, i64 0, i64 0), i8** %2, align 8
  br label %73

62:                                               ; preds = %1
  store i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str.57, i64 0, i64 0), i8** %2, align 8
  br label %73

63:                                               ; preds = %1
  store i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.58, i64 0, i64 0), i8** %2, align 8
  br label %73

64:                                               ; preds = %1
  store i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.59, i64 0, i64 0), i8** %2, align 8
  br label %73

65:                                               ; preds = %1
  store i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.60, i64 0, i64 0), i8** %2, align 8
  br label %73

66:                                               ; preds = %1
  store i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.61, i64 0, i64 0), i8** %2, align 8
  br label %73

67:                                               ; preds = %1
  store i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.62, i64 0, i64 0), i8** %2, align 8
  br label %73

68:                                               ; preds = %1
  store i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.63, i64 0, i64 0), i8** %2, align 8
  br label %73

69:                                               ; preds = %1
  store i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.64, i64 0, i64 0), i8** %2, align 8
  br label %73

70:                                               ; preds = %1
  store i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str.65, i64 0, i64 0), i8** %2, align 8
  br label %73

71:                                               ; preds = %1
  store i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.66, i64 0, i64 0), i8** %2, align 8
  br label %73

72:                                               ; preds = %1
  store i8* null, i8** %2, align 8
  br label %73

73:                                               ; preds = %72, %71, %70, %69, %68, %67, %66, %65, %64, %63, %62, %61, %60, %59, %58, %57, %56, %55, %54, %53, %52, %51, %50, %49, %48, %47, %46, %45, %44, %43, %42, %41, %40, %39, %38, %37, %36, %35, %34, %33, %32, %31, %30, %29, %28, %27, %26, %25, %24, %23, %22, %21, %20, %19, %18, %17, %16, %15, %14, %13, %12, %11, %10, %9, %8, %7, %6, %5
  %74 = load i8*, i8** %2, align 8
  ret i8* %74
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
